@@ -108,3 +108,5 @@ export USE_NAT_TRAVERSAL USE_NAT_TRAVERSAL_TRANSPORT_MODE USE_LDAP
 export USE_LIBCURL USE_SMARTCARD USE_OE
 export USE_WEAKSTUFF USE_NOCRYPTO USE_EXTRACRYPTO USE_BASH
 export USE_TAPROOM USE_OBJDIR
+export HAVE_STATSD USE_DYNAMICDNS
+
