@@ -16,6 +16,10 @@
 
 # All of the USE_ and HAVE_ variables are controlled from openswan/Makefile.inc
 
+ifeq ($(USE_DYNAMICDNS),true)
+DYNAMICDNS=1
+DYNAMICDNSDEF=-DDYNAMICDNS
+endif
 
 ifeq ($(USE_LDAP),true)
 # Everyone (should) be using LDAPv3, however LDAP_VERSION=2 is an option
@@ -268,6 +272,7 @@ DEFINES = $(EXTRA_DEFINES) \
 	$(KEYRR_DEFINES) \
 	$(BYTE_ORDER) \
 	$(LWRESDEF) \
+	$(DYNAMICDNSDEF) \
 	$(NETKEY_DEFS) \
 	$(X509_DEFS) \
 	${EXTRA_CRYPTO_DEFS} \
